fix: fix zoom issues on iOS

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -93,7 +93,3 @@
       "calt" 1;
   }
 }
-
-body {
-  touch-action: pan-x pan-y;
-}
